Fix edit button in map location settings is not showing up

--- a/elements/upfront-maps/css/edit.css
+++ b/elements/upfront-maps/css/edit.css
@@ -34,32 +34,6 @@
 	width: 100%;
 }
 
-.upfront-field-wrap-refresh button {
-	background: rgb(251, 251, 251) !important;
-	border: 1px solid rgb(169, 169, 169);
-	border-left: none;
-	height: 22px;
-	width: 30px;
-}
-
-.upfront-field-wrap-refresh button:before {
-	content: " ";
-	background-image: url('../../../img/uf-core-el-sprite_new.png');
-	background-image: url('../../../img/uf-core-el-sprite_new.svg');
-	background-repeat: no-repeat;
-	background-position: -477px -73px;
-	width: 25px;
-	height: 20px;
-	display: block;
-	position: relative;
-}
-
-.upfront-field-wrap-refresh button img {
-	opacity: 0.7;
-	width: 15px;
-	margin-top: 3px;
-}
-
 .upfront-field-wrap-text {
 	width: 84% !important;
 }
