--- a/elements/upfront-maps/css/upfront-map-editor.css
+++ b/elements/upfront-maps/css/upfront-map-editor.css
@@ -14,9 +14,10 @@
 	width: 225px;
 }
 
+
 .upfront_map-fields-simple_location .upfront-field-wrap-refresh button {
 	background: rgb(251, 251, 251) !important;
-    border: 1px solid rgb(169, 169, 169);
+	border: 1px solid rgb(169, 169, 169);
 	border-left: none;
 	height: 22px;
 	width: 30px;
@@ -38,8 +39,4 @@
 	opacity: 0.7;
 	width: 15px;
 	margin-top: 3px;
-}
-
-.upfront_map-fields-simple_location .upfront-field-wrap-text {
-	width: 84% !important;
 }
